--- a/src/scss/_Header.scss
+++ b/src/scss/_Header.scss
@@ -1,32 +1,61 @@
 .Container-Header {
-    background-color: yellow;
-    position: relative;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 8vh;
+    background-color: rgb(134, 24, 24);
 
-    &-texthead{
-        display: inline-block;
-        padding-left: 1rem;
+    &-logo{
+        color: white;
+        text-transform: uppercase;
+        letter-spacing: .5rem;
+        font-size: 2rem;
     }
 
     & ul{
-        margin: 0;
-        padding: 0;
-        text-align: center;
-        display: inline-block;
-
-        z-index: 1;
+        justify-content: space-around;
+        display: none;
 
         & li {
-            display: inline-block;
-            padding: 1rem;
+            list-style: none;
+            color: white;
+            font-weight: bold;
         }
     }
 }
 
-.iconMenu {
-    position: absolute;
-    right: 1rem;
-    top: 50%;
-    transform: translateY(-50%);
+.burger {
 
-    font-size: 2rem;
+    & div {
+        width: 2.5rem;
+        height: .3rem;
+        background-color: white;
+        margin: .5rem;
+    }
+}
+
+@include respond (tab-port) {
+    .Container-Header {
+        & ul {
+            width: 60%;
+            display: flex;
+
+            & li {
+                font-size: 1.4rem;
+                letter-spacing: .3rem;
+            }
+        }
+
+        &-logo {
+            font-size: 2rem;
+        }
+    }
+
+    .burger {
+        display: none;
+    }
+}
+
+@include respond(tab-land) {
+
 }
