--- a/src/scss/_Header.scss
+++ b/src/scss/_Header.scss
@@ -3,7 +3,7 @@
     justify-content: space-around;
     align-items: center;
     min-height: 8vh;
-    background-color: rgb(134, 24, 24);
+    background-color: $primary-red-color;
 
     &-logo{
         color: white;
