--- a/src/scss/_Header.scss
+++ b/src/scss/_Header.scss
@@ -4,6 +4,7 @@
     align-items: center;
     min-height: 8vh;
     background-color: $primary-red-color;
+    width: 100%;
 
     &-logo{
         color: white;
@@ -30,6 +31,7 @@
 }
 
 .burger {
+    cursor: pointer;
 
     & div {
         width: 2.5rem;
