--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-    background-color: $primary-red-color;
+    background-color: $color-1;
 
     display: flex;
     justify-content: space-around;
