--- a/src/scss/_Slideshow.scss
+++ b/src/scss/_Slideshow.scss
@@ -1,41 +1,62 @@
 .Slide-container {
-    width: 50%;
-    position: static;
-    transform: translateX(50%);
-
-    border: 1px solid black;
-    padding: 10px;
-    margin: 20px;
+    
 }
 .each-slide {
     width: 100%;
+    pointer-events: none;
+    user-select: none;
+    margin-top: -50px;
+    
+    & img{
+        width: 100%;
+        height: 100%;
+    }
 
     & > div {
         display: flex;
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
-        height: 400px;
+        width: 100%;
+        height: 100%;
     }
 
 }
 
 .Arrow {
-    width: 30px;
-    height: 30px;
-    background-color: red;
+    color: $color-2;
+    font-size: 4rem;
+    cursor: pointer;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+
+    &:hover {
+        transition: all .5s;
+        background-color: rgba(0, 0, 0, 0.5);
+        color: $white;
+    }
 
     &-prev {
         margin-right: -30px;
+        padding-left: 10px !important;
     }
 
     &-next {
         margin-left: -30px;
+        padding-right: 10px !important;
     }
 }
 
 .indicator {
-    padding: 10px;
-    height: 10px;
-    width: 10px;
+    border-radius: 50%;
+    margin: -5.5vh .3rem 0 .3rem;
+    height: 12px;
+    width: 12px;
+    background-color: $white;
+    z-index: 3;
+    cursor: pointer;
+
+    &.active {
+        background-color: rgb(100, 100, 100);
+    }
 }
