--- a/src/scss/_default.scss
+++ b/src/scss/_default.scss
@@ -6,3 +6,13 @@ html {
 *{
     box-sizing: border-box;
 }
+
+.container-fluid {
+    margin: 0px !important;
+    padding: 0px !important;
+}
+
+.row {
+    margin: 0px !important;
+    padding: 0px !important;
+}
