--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -1,1 +1,7 @@
-$primary-red-color: rgb(134, 24, 24);
+$color-1: rgb(134, 24, 24);
+$color-1-2: rgba(134, 24, 24, 0.8);
+
+$color-2: rgb(226, 160, 160);
+
+$white: white;
+$gray: rgb(248, 248, 248);
