--- a/src/scss/_Header.scss
+++ b/src/scss/_Header.scss
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: $color-1-2 ;
+    background-color: $color-1 ;
 
     &-brand {
         text-align: center !important;
