--- a/src/scss/_animation.scss
+++ b/src/scss/_animation.scss
@@ -2,3 +2,14 @@
     0% {opacity: 0; transform: translateY(50%)}
     100% {opacity: 1; transform: translateY(0%)}
 }
+
+@keyframes arrowSlideLeft {
+    0% {opacity: 0; transform: translateX(50%)}
+    100% {opacity: 1; transform: translateX(0%)}
+}
+
+
+@keyframes arrowSlideRight {
+    0% {opacity: 0; transform: translateX(-50%)}
+    100% {opacity: 1; transform: translateX(0%)}
+}
