--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*
 0 - 600 px          Phone
 600 - 900 px        Tablet portrait
@@ -13,6 +14,36 @@ $breakpoint arguement choice:
 -tab-port
 -tab-land
 -big-desktop
+
+
+// 1em = 16px
+// เริ่มจากหน้าจอมือถือ
+
+@mixin respond($breakpoint) { //ใน breakpoint ใส่ phone/tab-land/tab-port เป็นต้น
+    @if $breakpoint == phone-port {
+        @media (min-width: 20.05em) { @content };  // 320px พอดี
+    }
+
+    @if $breakpoint == phone-land {
+        @media (min-width: 30.05em) { @content };  // 480px พอดี
+    }
+
+    @if $breakpoint == tab-port {
+        @media (min-width: 48.05em) { @content }; // 768px พอดี
+    }
+
+    @if $breakpoint == tab-land {
+        @media (min-width: 64.05em) { @content }; // 1024px พอดี
+    }
+
+    @if $breakpoint == desktop {
+        @media (min-width: 80.05em) { @content }; // 1280px พอดี
+    }
+
+    @if $breakpoint == big-desktop {
+        @media (min-width: 90.05em) { @content }; // 1440px พอดี
+    }
+}
 */
 html {
   font-size: 62.5%;
@@ -37,8 +68,24 @@ html {
     opacity: 1;
     transform: translateY(0%); } }
 
+@keyframes arrowSlideLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(50%); }
+  100% {
+    opacity: 1;
+    transform: translateX(0%); } }
+
+@keyframes arrowSlideRight {
+  0% {
+    opacity: 0;
+    transform: translateX(-50%); }
+  100% {
+    opacity: 1;
+    transform: translateX(0%); } }
+
 .navbar {
-  background-color: rgba(134, 24, 24, 0.8); }
+  background-color: #861818; }
   .navbar-brand {
     text-align: center !important; }
     .navbar-brand .logo-content {
@@ -101,46 +148,60 @@ footer {
   width: 100%;
   color: white; }
 
-.each-slide {
+.Slide-container .each-slide {
   width: 100%;
   pointer-events: none;
   user-select: none;
-  margin-top: -50px; }
-  .each-slide img {
+  position: relative; }
+  .Slide-container .each-slide img {
     width: 100%;
     height: 100%; }
-  .each-slide > div {
-    display: flex;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    height: 100%; }
+  .Slide-container .each-slide .slideContent {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
+    .Slide-container .each-slide .slideContent-1 {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      color: white;
+      pointer-events: initial; }
+    .Slide-container .each-slide .slideContent-2 {
+      position: absolute;
+      top: 20%;
+      left: 10%;
+      text-align: start;
+      pointer-events: initial; }
 
-.Arrow {
+.Slide-container .Arrow {
   color: #e2a0a0;
   font-size: 4rem;
   cursor: pointer;
   padding-top: 5vh;
   padding-bottom: 5vh; }
-  .Arrow:hover {
+  .Slide-container .Arrow:hover {
     transition: all .5s;
     background-color: rgba(0, 0, 0, 0.5);
     color: white; }
-  .Arrow-prev {
+  .Slide-container .Arrow-prev {
     margin-right: -30px;
-    padding-left: 10px !important; }
-  .Arrow-next {
+    padding-left: 10px !important;
+    animation: arrowSlideLeft 1s; }
+  .Slide-container .Arrow-next {
     margin-left: -30px;
-    padding-right: 10px !important; }
+    padding-right: 10px !important;
+    animation: arrowSlideRight 1s; }
 
-.indicator {
+.Slide-container .indicator {
   border-radius: 50%;
-  margin: -5.5vh .3rem 0 .3rem;
+  margin: -9vh .3rem 0 .3rem;
   height: 12px;
   width: 12px;
   background-color: white;
   z-index: 3;
   cursor: pointer; }
-  .indicator.active {
+  .Slide-container .indicator.active {
     background-color: #646464; }
