--- a/src/scss/_Slideshow.scss
+++ b/src/scss/_Slideshow.scss
@@ -12,10 +12,6 @@
         }
 
         & .slideContent {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%,-50%);
 
             &-1 {
                 position: absolute;
@@ -33,6 +29,15 @@
                 left: 10%;
                 text-align: start;
                 pointer-events: initial;
+            }
+
+            &-3 {
+                position: absolute;
+                top: 20%;
+                left: 10%;
+                text-align: start;
+                color: black;
+                pointer-events: initial; 
             }
         }
     }
