--- a/src/style.css
+++ b/src/style.css
@@ -84,6 +84,12 @@ html {
     opacity: 1;
     transform: translateX(0%); } }
 
+@keyframes fadeIn {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
 .navbar {
   background-color: #861818; }
   .navbar-brand {
@@ -156,25 +162,27 @@ footer {
   .Slide-container .each-slide img {
     width: 100%;
     height: 100%; }
-  .Slide-container .each-slide .slideContent {
+  .Slide-container .each-slide .slideContent-1 {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%); }
-    .Slide-container .each-slide .slideContent-1 {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-      color: white;
-      pointer-events: initial; }
-    .Slide-container .each-slide .slideContent-2 {
-      position: absolute;
-      top: 20%;
-      left: 10%;
-      text-align: start;
-      pointer-events: initial; }
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: white;
+    pointer-events: initial; }
+  .Slide-container .each-slide .slideContent-2 {
+    position: absolute;
+    top: 20%;
+    left: 10%;
+    text-align: start;
+    pointer-events: initial; }
+  .Slide-container .each-slide .slideContent-3 {
+    position: absolute;
+    top: 20%;
+    left: 10%;
+    text-align: start;
+    color: black;
+    pointer-events: initial; }
 
 .Slide-container .Arrow {
   color: #e2a0a0;
