--- a/src/scss/_animation.scss
+++ b/src/scss/_animation.scss
@@ -18,3 +18,9 @@
     0% {opacity: 0;}
     100% {opacity: 1;}
 }
+
+@keyframes IconRotateY {
+    0%{transform: rotateY(0deg);}
+    50%{transform: rotateY(90deg);}
+    100%{transform: rotateY(0deg);}
+}
