--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,5 +1,6 @@
 footer {
     background-color: $color-1;
+    padding: 1rem 0;
 
     display: flex;
     justify-content: space-around;
@@ -13,4 +14,39 @@ footer {
 
     width: 100%;
     color: white;
+    text-align: center;
+
+    & img {
+        margin: 1rem 0;
+        border-radius: 50%;
+        height: 7rem;
+    }
+
+    & .brandLink {
+        color: $white;
+        width: 100%;
+        height: 100%;
+        margin: 0 .5rem;
+
+        & .brandIcon{
+            font-size: 2rem;
+        }
+
+        &:hover{
+            
+            & .brandIcon {
+                transition: color 1s;
+                animation: IconRotateY .8s;
+                
+                &-facebook{
+                    color: rgb(77, 139, 219);
+                }
+
+                &-line{
+                    color: rgb(77, 219, 108);
+                }
+            }
+        }
+
+    }
 }
