--- a/src/style.css
+++ b/src/style.css
@@ -241,3 +241,52 @@ footer {
   cursor: pointer; }
   .Slide-container .indicator.active {
     background-color: #646464; }
+
+.contain-login {
+  background-image: url("./images/Piclogin.jpg");
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 100vh; }
+  .contain-login-2 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    box-shadow: 1px 1px 8px 2px #464646;
+    min-height: 50vh; }
+    .contain-login-2 .imglogin {
+      background-color: #861818;
+      color: white;
+      padding: 2rem;
+      text-align: center; }
+      .contain-login-2 .imglogin .picLog img {
+        margin-top: 50%;
+        width: 50%;
+        background-color: white;
+        border-radius: 50%;
+        margin-left: 50%;
+        transform: translateX(-50%); }
+    .contain-login-2 form {
+      padding: 2rem 1rem; }
+      .contain-login-2 form .text-label {
+        font-size: .9rem !important; }
+      .contain-login-2 form .feedback-text {
+        text-align: end; }
+      .contain-login-2 form .button-group {
+        margin-top: 20% !important; }
+        .contain-login-2 form .button-group button {
+          background-color: #861818;
+          color: white;
+          letter-spacing: .2rem;
+          font-weight: bold; }
+          .contain-login-2 form .button-group button:hover {
+            transition: all .5s;
+            color: #861818;
+            background-color: #e2a0a0;
+            box-shadow: 0 0 2px 1px #e2a0a0; }
+      .contain-login-2 form .textSignin {
+        text-align: end;
+        margin-top: 10px;
+        color: #861818; }
