--- a/src/style.css
+++ b/src/style.css
@@ -290,3 +290,35 @@ footer {
         text-align: end;
         margin-top: 10px;
         color: #861818; }
+
+.grid-container {
+  display: grid;
+  padding: 10px;
+  grid-template-columns: 40% 40%;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+  justify-content: space-around;
+  align-content: start;
+  min-height: 60vh; }
+  .grid-container .grid-item {
+    background-color: hotpink;
+    box-shadow: 2px 2px 6px 2px #535353;
+    min-height: 20vh; }
+    .grid-container .grid-item-1 {
+      position: relative; }
+      .grid-container .grid-item-1 img {
+        width: 100%;
+        height: 100%; }
+      .grid-container .grid-item-1 div {
+        position: absolute;
+        bottom: 20px;
+        left: 20px; }
+      .grid-container .grid-item-1:hover {
+        transition: all 1s;
+        transform: scale(1.2); }
+    .grid-container .grid-item-3 {
+      grid-column-start: 2;
+      grid-column-end: 2;
+      grid-row-start: 1;
+      grid-row-end: 3;
+      width: 40%; }
