--- a/src/scss/_default.scss
+++ b/src/scss/_default.scss
@@ -1,10 +1,15 @@
+@font-face {
+    font-family: "Work-Regular";
+    src: url("./fonts/WorkSans-Regular.ttf");
+}
+
 html {
     font-size: 62.5%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 *{
     box-sizing: border-box;
+    font-family: 'Work-Regular';
 }
 
 .container-fluid {
