--- a/src/style.css
+++ b/src/style.css
@@ -45,12 +45,16 @@ $breakpoint arguement choice:
     }
 }
 */
+@font-face {
+  font-family: "Work-Regular";
+  src: url("./fonts/WorkSans-Regular.ttf"); }
+
 html {
-  font-size: 62.5%;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+  font-size: 62.5%; }
 
 * {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  font-family: 'Work-Regular'; }
 
 .container-fluid {
   margin: 0px !important;
@@ -97,6 +101,74 @@ html {
     transform: rotateY(90deg); }
   100% {
     transform: rotateY(0deg); } }
+
+@keyframes overlayInfo-active {
+  0% {
+    transform: translateX(0); }
+  100% {
+    transform: translateX(100%); } }
+
+@keyframes overlayInfo {
+  0% {
+    transform: translateX(100%); }
+  100% {
+    transform: translateX(0%); } }
+
+@keyframes overlayInfoSlidetoRight {
+  0% {
+    transform: translateX(-40%);
+    opacity: 0; }
+  100% {
+    transform: translateX(0);
+    opacity: 1; } }
+
+@keyframes overlayInfoSlidetoLeft {
+  0% {
+    transform: translateX(40%);
+    opacity: 0; }
+  100% {
+    transform: translateX(0%);
+    opacity: 1; } }
+
+@keyframes overlayform-1toLeft {
+  0% {
+    left: 10%;
+    opacity: 0;
+    display: none; }
+  100% {
+    left: 0%;
+    opacity: 1;
+    display: block; } }
+
+@keyframes overlayform-1toRight {
+  0% {
+    left: 0%;
+    opacity: 1;
+    display: block; }
+  100% {
+    left: 10%;
+    opacity: 0;
+    display: none; } }
+
+@keyframes overlayformSlidetoLeft {
+  0% {
+    transform: translateX(0);
+    opacity: 1;
+    display: block; }
+  100% {
+    transform: translateX(-10%);
+    opacity: 0;
+    display: none; } }
+
+@keyframes overlayformSlidetoRight {
+  0% {
+    transform: translateX(-10%);
+    opacity: 0;
+    display: none; }
+  100% {
+    transform: translateX(0%);
+    opacity: 1;
+    display: block; } }
 
 .navbar {
   background-color: #861818; }
@@ -248,7 +320,7 @@ footer {
   top: 0;
   left: 0;
   min-height: 100vh; }
-  .contain-login-2 {
+  .contain-login .contain {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -256,40 +328,79 @@ footer {
     background-color: white;
     box-shadow: 1px 1px 8px 2px #464646;
     min-height: 50vh; }
-    .contain-login-2 .imglogin {
+    .contain-login .contain .overlay-info {
       background-color: #861818;
       color: white;
       padding: 2rem;
-      text-align: center; }
-      .contain-login-2 .imglogin .picLog img {
+      text-align: center;
+      z-index: 3; }
+      .contain-login .contain .overlay-info-disable {
+        animation: overlayInfo 1s;
+        transform: translateX(0); }
+      .contain-login .contain .overlay-info-active {
+        animation: overlayInfo-active 1s;
+        transform: translateX(100%); }
+      .contain-login .contain .overlay-info-signup {
+        display: block; }
+        .contain-login .contain .overlay-info-signup-disable {
+          display: block;
+          animation: overlayInfoSlidetoRight 1s; }
+        .contain-login .contain .overlay-info-signup-active {
+          display: none; }
+      .contain-login .contain .overlay-info-signin {
+        display: none; }
+        .contain-login .contain .overlay-info-signin-disable {
+          display: none; }
+        .contain-login .contain .overlay-info-signin-active {
+          display: block;
+          animation: overlayInfoSlidetoLeft 1s; }
+      .contain-login .contain .overlay-info .picLog img {
         margin-top: 50%;
         width: 50%;
         background-color: white;
         border-radius: 50%;
         margin-left: 50%;
         transform: translateX(-50%); }
-    .contain-login-2 form {
-      padding: 2rem 1rem; }
-      .contain-login-2 form .text-label {
+    .contain-login .contain .overlay-form {
+      padding: 2rem 1rem;
+      position: relative; }
+      .contain-login .contain .overlay-form-1 {
+        position: absolute;
+        top: 0;
+        left: 0; }
+        .contain-login .contain .overlay-form-1-active {
+          animation: overlayform-1toLeft 1s; }
+        .contain-login .contain .overlay-form-1-disable {
+          animation: overlayform-1toRight 1s; }
+      .contain-login .contain .overlay-form-2-active {
+        animation: overlayformSlidetoLeft 1s; }
+      .contain-login .contain .overlay-form-2-disable {
+        animation: overlayformSlidetoRight 1s; }
+      .contain-login .contain .overlay-form .text-label {
         font-size: .9rem !important; }
-      .contain-login-2 form .feedback-text {
+      .contain-login .contain .overlay-form .feedback-text {
         text-align: end; }
-      .contain-login-2 form .button-group {
+      .contain-login .contain .overlay-form .button-group {
         margin-top: 20% !important; }
-        .contain-login-2 form .button-group button {
+        .contain-login .contain .overlay-form .button-group button {
           background-color: #861818;
           color: white;
           letter-spacing: .2rem;
           font-weight: bold; }
-          .contain-login-2 form .button-group button:hover {
+          .contain-login .contain .overlay-form .button-group button:hover {
             transition: all .5s;
             color: #861818;
             background-color: #e2a0a0;
             box-shadow: 0 0 2px 1px #e2a0a0; }
-      .contain-login-2 form .textSignin {
+      .contain-login .contain .overlay-form .textSignin {
         text-align: end;
         margin-top: 10px;
         color: #861818; }
+
+#signIn {
+  background-color: blueviolet; }
+  #signIn .contain-2 {
+    display: block; }
 
 .grid-container {
   display: grid;
