--- a/src/scss/_animation.scss
+++ b/src/scss/_animation.scss
@@ -64,3 +64,13 @@
     0%{transform: translateX(-10%); opacity: 0; display: none;}
     100%{transform: translateX(0%); opacity: 1; display: block;}
 }
+
+@keyframes heightDown {
+    0%{height: 0%;}
+    100%{height: 100%;}
+}
+
+@keyframes heightUp {
+    0%{height: 100%;}
+    100%{height: 0%;}
+}
