--- a/src/scss/_products.scss
+++ b/src/scss/_products.scss
@@ -1,7 +1,7 @@
-.grid-container {
+.grid-container-product {
     display: grid;
-    padding: 10px;
-    grid-template-columns: 40% 40%;
+    padding: 20px;
+    grid-template-columns: 45% 45%;
     grid-column-gap: 20px;
     grid-row-gap: 20px;
     justify-content: space-around;
@@ -10,37 +10,128 @@
     min-height: 60vh;
 
     & .grid-item {
-        background-color: hotpink;
         box-shadow: 2px 2px 6px 2px rgb(83, 83, 83);
-        min-height: 20vh;
+        min-height: 30vh;
+        text-align: center;
+        padding: 30px;
+        margin-top: 20px;
+        color: $color-1;
+      
 
-        &-1 {
-            position: relative;
+        &1 {
+            animation: fadeInDown .5s;
             & img {
-                width: 100%;
-                height: 100%;
+                width: 80%;
+                height: 90%;
             }
 
-            & div {
-                position: absolute;
-                bottom: 20px;
-                left: 20px;
-            }
-
-            &:hover {
-                transition: all 1s;
-                transform: scale(1.2);
-            }
         }
-        &-3 {
+        &2 {
+            animation: fadeInRight .8s;
             grid-column-start: 2;
-            grid-column-end: 2;
+            grid-column-end: 3;
             grid-row-start: 1;
             grid-row-end: 3;
-
-            width: 40%;
             
+            & img {
+                width: 80%;
+                height: 80%;
+            }
         }
+
+        &3 {
+            animation: fadeInUp 1s;
+            & img{
+                height: 70%;
+            }
+        }
+
+        &4 {
+            
+            & img{
+                height: auto;
+                width: 50%;
+            }
+        }
+
+        &5 {
+            & img{
+                height: auto;
+                width: 50%;
+            }
+        }
+    }
+
+    .textHover {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        visibility: hidden;
+    }
+
+    & .mouseOut {
+        transform: scale(1);
+        transition: all .5s;
+        
+
+        & .textHover {
+            animation: heightUp .8s;
+            transition: all .4s;
+        }
+    }
+
+    & .mouseOver {
+        transform: scale(1.03);
+        transition: all .5s;
+        box-shadow: -2px -2px 6px 2px rgb(83, 83, 83);
+        
+        & .textHover {
+            color: white;
+            visibility: visible;
+            background-color: $color-1-2;
+            animation: heightDown .8s;
+            transition: animation .8s ease-in-out;
+        }
+    }
+}
+
+
+.product-item{
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    background-color: rgba(128, 128, 128, 0.541);
+    min-width: 100vw;
+    min-height: 100vh;
+
+    & button {
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+
+    &1{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+
+    }
+
+    &2{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+
+    }
+
+    & img{
+        width: 100%;
+        height: 100%;
     }
 }
 
