--- a/src/style.css
+++ b/src/style.css
@@ -474,7 +474,7 @@ footer {
     .grid-container-product .mouseOver .textHover {
       color: white;
       visibility: visible;
-      background-color: rgba(134, 24, 24, 0.8);
+      background-color: rgba(134, 24, 24, 0.3);
       animation: heightDown .8s;
       transition: animation .8s ease-in-out; }
 
@@ -502,3 +502,63 @@ footer {
   .product-item img {
     width: 100%;
     height: 100%; }
+
+.userInfo-container {
+  min-height: 60vh; }
+  .userInfo-container .row {
+    text-align: center; }
+    .userInfo-container .row-1 .img-content {
+      margin: 5rem 0; }
+      .userInfo-container .row-1 .img-content img {
+        border-radius: 50%;
+        height: 50vh;
+        padding: 2rem;
+        background-color: #861818; }
+    .userInfo-container .row-1 .text-content {
+      font-size: 1.8rem; }
+    .userInfo-container .row-2 {
+      margin: 5rem 0; }
+      .userInfo-container .row-2 .icon {
+        font-size: 3.5rem;
+        color: white;
+        padding: 2rem;
+        margin: 0 2rem;
+        background-color: #861818;
+        border-radius: 50%; }
+        .userInfo-container .row-2 .icon:hover {
+          background-color: black;
+          transition: all 1s; }
+
+.patientlist-table {
+  min-height: 60vh; }
+
+.col-header {
+  font-size: 16px;
+  text-align: center;
+  color: white;
+  font-weight: bold;
+  padding: 5px;
+  margin-top: 10px; }
+
+.col {
+  font-size: 16px; }
+
+.row-highlight {
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  background-color: #861818;
+  padding-left: 15px; }
+
+.btn-download {
+  font-size: 16px;
+  background-color: orangered;
+  border: none;
+  text-align: center;
+  border-radius: 10px;
+  width: inherit;
+  height: inherit;
+  padding: 10px; }
+
+.form-control {
+  width: 50%; }
