--- a/src/scss/_patient.scss
+++ b/src/scss/_patient.scss
@@ -1,5 +1,9 @@
 .patientlist-table {
-  min-height: 60vh;
+  min-height: 100vh;
+}
+
+.contain-patient{
+  min-height: 100vh;
 }
 .col-header {
     font-size: 16px;
