--- a/src/style.css
+++ b/src/style.css
@@ -530,7 +530,10 @@ footer {
           transition: all 1s; }
 
 .patientlist-table {
-  min-height: 60vh; }
+  min-height: 100vh; }
+
+.contain-patient {
+  min-height: 100vh; }
 
 .col-header {
   font-size: 16px;
