--- a/src/scss/_animation.scss
+++ b/src/scss/_animation.scss
@@ -74,3 +74,9 @@
     0%{height: 100%;}
     100%{height: 0%;}
 }
+
+@keyframes RotateX {
+    0%{transform: rotateX(0deg);}
+    50%{transform: rotateX(-70deg);}
+    100%{transform: rotateX(0deg);}
+}
