--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,10 +1,6 @@
 footer {
     background-color: $color-1;
     padding: 1rem 0;
-
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
     min-height: 4vh;
 
     position: static; 
@@ -22,31 +18,52 @@ footer {
         height: 7rem;
     }
 
-    & .brandLink {
-        color: $white;
-        width: 100%;
-        height: 100%;
-        margin: 0 .5rem;
+   & .icon-zone {
+        & .brandLink {  
+            position: relative;
+            display: inline-block;
+            margin: 0 20px;
+            padding: 0;
+            & a{
+                color: white;
+                width: 100%;
+                height: 100%;
+                margin: 0 .5rem;
+            }
 
-        & .brandIcon{
-            font-size: 2rem;
-        }
+            & .brandIcon{
+                font-size: 20rem;
+                padding: 10px;
+                transition: all .5s ease-out;
+            }
 
-        &:hover{
-            
-            & .brandIcon {
-                transition: color 1s;
-                animation: IconRotateY .8s;
-                
-                &-facebook{
-                    color: rgb(77, 139, 219);
+            & .line-icon{
+                position: absolute;
+                top: 0;
+                left: 0;
+                background-color: white;
+                z-index: 1;
+                height: 0%;
+                opacity: 0;
+                border-radius: 5px;
+                transition: all .5s ease-out;
+            }
+
+            &:hover {
+                & a{
+                    color: $color-1;
                 }
+                & .line-icon{
+                    opacity: 1;
+                    height: 100%;
 
-                &-line{
-                    color: rgb(77, 219, 108);
+                    & .brandIcon{
+                        
+                        transition: all .5s ease-out;
+                    }
                 }
             }
-        }
 
-    }
+        }
+   }
 }
