--- a/src/scss/_products.scss
+++ b/src/scss/_products.scss
@@ -1,137 +1,98 @@
-.grid-container-product {
-    display: grid;
-    padding: 20px;
-    grid-template-columns: 45% 45%;
-    grid-column-gap: 20px;
-    grid-row-gap: 20px;
-    justify-content: space-around;
-    align-content: start;
+.productItem{
+    width: 100%;
+    box-shadow: 0px 0px 8px 3px rgba(0,0,0, 0.1);
+    position: relative;
+    margin: 5rem 0;
+    border-radius: 5px;
+    transition: all .5s ease-out;
 
-    min-height: 60vh;
-
-    & .grid-item {
-        box-shadow: 2px 2px 6px 2px rgb(83, 83, 83);
-        min-height: 30vh;
-        text-align: center;
-        padding: 30px;
-        margin-top: 20px;
-        color: $color-1;
-      
-
-        &1 {
-            animation: fadeInDown .5s;
-            & img {
-                width: 80%;
-                height: 90%;
-            }
-
-        }
-        &2 {
-            animation: fadeInRight .8s;
-            grid-column-start: 2;
-            grid-column-end: 3;
-            grid-row-start: 1;
-            grid-row-end: 3;
-            
-            & img {
-                width: 80%;
-                height: 80%;
-            }
-        }
-
-        &3 {
-            animation: fadeInUp 1s;
-            & img{
-                height: 70%;
-            }
-        }
-
-        &4 {
-            
-            & img{
-                height: auto;
-                width: 50%;
-            }
-        }
-
-        &5 {
-            & img{
-                height: auto;
-                width: 50%;
-            }
-        }
+    &:hover {
+        box-shadow: 0px 3px 8px 3px $color-1-2;
+        transform: translateY(-3px);
+        transition: all .5s ease-out;
     }
 
-    .textHover {
-        position: absolute;
-        top: 0;
-        left: 0;
+    & a{
+        &:hover{
+            text-decoration: none;
+        }
+    } 
+
+    & .main-container{
+        padding: 4rem !important;
         width: 100%;
-        height: 100%;
-        visibility: hidden;
-    }
 
-    & .mouseOut {
-        transform: scale(1);
-        transition: all .5s;
-        
-
-        & .textHover {
-            animation: heightUp .8s;
-            transition: all .4s;
+        & img{
+            width: 100%;
+            height: auto;
         }
-    }
 
-    & .mouseOver {
-        transform: scale(1.03);
-        transition: all .5s;
-        box-shadow: -2px -2px 6px 2px rgb(83, 83, 83);
-        
-        & .textHover {
-            color: white;
-            visibility: visible;
-            background-color: $color-1-2;
-            animation: heightDown .8s;
-            transition: animation .8s ease-in-out;
+        & .primary-content{
+            color: $color-1;
+            text-align: center;
+            padding: 40px;
+            & .head-text{
+                font-size: 3rem;
+                font-weight: bold;
+                border-bottom: 2px solid $color-1;
+                min-width: 100%;
+            }
+            & .price-text{
+                font-size: 1.8rem;
+                margin-top: 1.2rem;
+            }
+            & .info-text{
+                font-size: 1.8rem;
+            }
+
         }
+
+        & .secondary-content{
+            position: absolute;
+            top: 0;
+            left: 0;
+            background-color: $color-2;
+            z-index: -1;
+            opacity: 0;
+            min-height: 1%;
+            min-width: 1%;
+            border-radius: 5px;
+            text-align: center;
+            transition: all .6s ease-out;
+
+            &-text{
+                position: absolute;
+                top: 0;
+                left: 0;
+                font-size: 2rem;
+                opacity: 0;
+                color: white;
+                transition: all .6s ease-out;
+            }
+        }
+
+        &:hover {
+            & .primary-content{
+
+            }
+            & .secondary-content{
+                z-index: 10;
+                opacity: 1;
+                min-height: 100%;
+                min-width: 100%;
+                transition: all .6s ease-out;
+
+                &-text{
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%,-50%);
+                    opacity: 1;
+                    transition: all .6s ease-out;
+                }
+            }
+        }
+
     }
+
+    
 }
-
-
-.product-item{
-    position: fixed;
-    top: 0;
-    left: 0;
-
-    background-color: rgba(128, 128, 128, 0.541);
-    min-width: 100vw;
-    min-height: 100vh;
-
-    & button {
-        position: absolute;
-        top: 0;
-        right: 0;
-    }
-
-    &1{
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-50%);
-
-    }
-
-    &2{
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-50%);
-
-    }
-
-    & img{
-        width: 100%;
-        height: 100%;
-    }
-}
-
